# tr-api

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: auth-modes.md  cli-contract.md  documents.md  events.md  troubleshooting.md  websocket-topics.md
scratch/: getpin.php  v2_login_probe.py
src/tr_api/: __init__.py  account.py  accounts.py  activity_log.py  alarms.py  auth.py  cli.py  client.py  cookies.py  documents.py  exceptions.py  portfolio.py  profiles.py  protocol.py  savings_plans.py  timeline_detail.py  transactions.py  waf.py  watchlist.py
