[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tr-de-api-py"
version = "0.1.0"
description = "Minimal Python client for Trade Republic (DE) — cookie-based auth via browser, no headless workaround"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSL-1.1" }
authors = [{ name = "Carlos Damken" }]
keywords = ["trade-republic", "traderepublic", "fintech", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.31",
    "websockets>=14",
    "pycookiecheat>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.scripts]
tr-de-api = "tr_de_api.cli:main"

[project.urls]
Homepage = "https://github.com/cdamken/tr-de-api-py"
Issues = "https://github.com/cdamken/tr-de-api-py/issues"

[tool.setuptools.packages.find]
where = ["src"]
