[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tr-api"
version = "0.1.0"
description = "Minimal Python client for Trade Republic (DE) — cookie-based auth via browser, no headless workaround"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSL-1.1" }
authors = [{ name = "Carlos Damken" }]
keywords = ["trade-republic", "traderepublic", "fintech", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.31",
    "websockets>=14",
    "pycookiecheat>=0.7",
]

[project.optional-dependencies]
# Programmatic login (avoids the user ever having to open Chrome themselves):
# launches headless Chromium under our control to fetch a fresh AWS WAF token,
# then runs the standard /api/v1/auth/web/login flow. Without this extra, the
# library still works via `auth import` (cookies from the user's own Chrome).
browser = ["playwright>=1.40"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "playwright>=1.40"]

[project.scripts]
tr-api = "tr_api.cli:main"

[project.urls]
Homepage = "https://github.com/cdamken/tr-api"
Issues = "https://github.com/cdamken/tr-api/issues"

[tool.setuptools.packages.find]
where = ["src"]
